# deep-learning-nlp-practicals

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
src/: practical_1.ipynb  practical_2.ipynb  practical_3_1.ipynb  practical_3_2.ipynb  practical_4_3.ipynb  vanilla-lstm.ipynb  vanilla-rnn.ipynb
src/lib/: clean_string.py  data.py  model.py  plot.py  text.py
